# kiosk-controlled-speech

./: .env.example  .gitignore  CLAUDE-development-plan.md  CLAUDE.md  MICROPHONE_FIX.md  MICROPHONE_SETUP.md  MICROPHONE_TROUBLESHOOTING.md  Modelfile  OPTIMIZATION_IMPLEMENTATION.md  README.md  SCREENSHOT_SYSTEM.md  SCREEN_CAPTURE_INTEGRATION_PLAN.md  VOICE_TO_ACTION_IMPROVEMENTS.md  check_available_tools.py  copy_screenshots_to_windows.py  detect_real_microphones.py  fix_audio_alsa.py  fix_audio_wsl.py  investigate_microphone.py  powershell_audio_detection.py  pyproject.toml  setup_portforward_simple.ps1  setup_web_app.sh  setup_windows_portforward.ps1  setup_wsl_audio.py  start.sh  start_web_app.sh  start_web_app_https.sh  test-modules.html  test_all_services.py  test_fastmcp_services.py  test_integration.py  test_mcp_screenshot.py  test_mcp_simple.py  test_minimal.py  test_powershell_fix.py  test_screenshot_direct.py  test_screenshot_simple.py  test_speech_to_text.py  test_web_integration.py  (+4 more)
certs/: cert.pem  key.pem  openssl.conf
config/: command_history.json  kiosk_data.json  kiosk_data.json.backup  mcp_config.json  model_config.json  slow_vad_config.json  vad_config.json
docs/: IMPLEMENTATION_RESULTS.md  WINDOWS_SETUP.md
kiosk_controlled_speech.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
research/: mcp-screenshot-analysis.md
scripts/: setup_wsl.sh  test_system.py
selenium_automation/: README.md  ULTRATHINK_ANALYSIS.md  USAGE_GUIDE.md  credentials_template.json  optix_portal_api_analysis.json  optix_portal_realistic_sitemap.yaml  requirements.txt
web_app/: CLAUDE.md  README.md  REFACTORING_PLAN.md  audio_config.json  error_recovery.py  main.py  vad_config.py  (+7 more)
(+121 files in other folders)
