[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kiosk-controlled-speech"
version = "0.1.0"
description = "Voice-controlled kiosk system using MCP framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Kiosk Team", email = "team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.1.0",
    "asyncio-mqtt",
    "pydantic>=2.0.0",
    "python-dotenv",
    "loguru",
    "typer",
    "rich",
    "faster-whisper>=0.10.0",
    "sounddevice",
    "numpy",
    "opencv-python",
    "pillow",
    "pyautogui",
    "pywin32; sys_platform == 'win32'",
    "pynput",
    "aiofiles",
    "httpx",
    "websockets",
    "fastmcp>=2.10.6",
    "speechrecognition>=3.14.3",
    "pydub>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
]

[project.scripts]
kiosk-orchestrator = "src.orchestrator.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "services*"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
